# rules_mgit

./: .bazelrc  .gitlab-ci.yml  BUILD.bazel  README.md  WORKSPACE  def.bzl  deps.bzl  setup.bzl
internal/example/: BUILD.bazel  hello.go  hello_test.go
internal/example/lib/: BUILD.bazel  lib.go
internal/nogo/: BUILD.bazel  nogo.bzl  nogo.json  staticcheck.bzl
internal/nogo/nogofmt/: BUILD.bazel  nogofmt.go
internal/nogo/nogomerge/: BUILD.bazel  go.mod  main.go
internal/nogo/unused/: BUILD.bazel  unused.go
